feat: create header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>optAd360</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus massa
+        neque, efficitur a odio ac, aliquet dignissim elit. Suspendisse potenti.
+        Etiam maximus posuere nisl ac condimentum. Nam porttitor odio tincidunt
+        ornare porta. Proin sit amet dui eleifend, iaculis massa et,
+        pellentesque dolor. Sed volutpat lacus lorem, at lacinia magna lobortis
+        a. In hac habitasse platea dictumst. Curabitur ex dui, sollicitudin sit
+        amet nulla vel, pharetra tristique lacus.
+      </p>
+      <br />
+      <p>
+        Vivamus auctor nunc sed scelerisque sodales. Integer facilisis venenatis
+        ante, venenatis tempor mi vehicula non. Ut id tellus nibh. Nam
+        ullamcorper, odio sit amet porta viverra, metus tortor ultricies lacus,
+        sit amet porttitor ipsum ligula eget nulla. Aenean lectus erat, auctor
+        sed iaculis at, tempor non est. Donec ornare quis risus at tempus.
+        Nullam suscipit maximus ex faucibus scelerisque. Quisque in magna
+        placerat, luctus sem sit amet, fermentum ante. Orci varius natoque
+        penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        Aliquam erat volutpat. Vivamus lectus eros, molestie non interdum id,
+        aliquet a sem. Cras mauris tellus, tempus sit amet maximus eu,
+        condimentum vel massa. Sed cursus arcu eget auctor viverra. Curabitur
+        bibendum purus in ex hendrerit porttitor.
+      </p>
+    </header>
+    <main><div id="app"></div></main>
+    <footer></footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
