feat: create toggle background service for footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,30 @@
       </p>
     </header>
     <main><div id="app"></div></main>
-    <footer></footer>
+    <footer id="footer">
+      <p>
+        Nulla laoreet, purus sed efficitur tincidunt, lacus odio porttitor
+        mauris, et sodales enim massa eget velit. Interdum et malesuada fames ac
+        ante ipsum primis in faucibus. Curabitur eget ornare ligula, ac
+        convallis ex. Nullam ac justo tortor. Vestibulum consectetur ipsum et
+        augue vehicula egestas.
+      </p>
+      <br />
+      <p>
+        Curabitur pretium sapien id mattis consequat. Sed elementum arcu ut est
+        vulputate viverra. Suspendisse malesuada metus purus, at hendrerit
+        turpis auctor sit amet. Sed vel ligula eget odio tincidunt rhoncus eu
+        non dui. Vivamus mattis ante ut mi sodales, et tincidunt odio consequat.
+      </p>
+      <br />
+      <p>
+        Vestibulum ultrices odio quis lorem consectetur dignissim. Aliquam
+        sagittis lorem risus. Etiam nisl purus, interdum ut ullamcorper sit
+        amet, porttitor vel nisl. Curabitur aliquet neque dui, vitae
+        pellentesque ipsum pellentesque eu. Vivamus accumsan justo turpis, nec
+        posuere mauris iaculis at. Aenean vestibulum rutrum aliquet.
+      </p>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
