feat: create chart service

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
         bibendum purus in ex hendrerit porttitor.
       </p>
     </header>
-    <main><div id="app"></div></main>
+    <main>
+      <div class="data-container">
+        <canvas id="chart"></canvas>
+        <table id="table"></table>
+      </div>
+      <button id="data-fetch">
+        <span id="button-txt">Pobież Dane</span>
+        <div id="loader" class="loader"></div>
+      </button>
+    </main>
     <footer id="footer">
       <p>
         Nulla laoreet, purus sed efficitur tincidunt, lacus odio porttitor
