--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/optAd360_recruitment_task/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>optAd360</title>
-    <script type="module" crossorigin src="/optAd360_recruitment_task/assets/index.005555dc.js"></script>
-    <link rel="stylesheet" href="/optAd360_recruitment_task/assets/index.c330deac.css">
+    <script type="module" crossorigin src="/optAd360_recruitment_task/assets/index.f316e9a8.js"></script>
+    <link rel="stylesheet" href="/optAd360_recruitment_task/assets/index.1d125383.css">
   </head>
   <body>
     <header>
@@ -35,7 +35,16 @@
         bibendum purus in ex hendrerit porttitor.
       </p>
     </header>
-    <main><div id="app"></div></main>
+    <main>
+      <div class="data-container">
+        <canvas id="chart"></canvas>
+        <table id="table"></table>
+      </div>
+      <button id="data-fetch">
+        <span id="button-txt">Pobież Dane</span>
+        <div id="loader" class="loader"></div>
+      </button>
+    </main>
     <footer id="footer">
       <p>
         Nulla laoreet, purus sed efficitur tincidunt, lacus odio porttitor
